--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1 {
 }
 
 .field-add {
-  display: flex;
+  display: none;
   flex-direction: column;
   width: 50%;
   margin: 8px auto;
@@ -136,6 +136,7 @@ h1 {
 }
 
 .contact {
+  display: none;
   flex-direction: column;
   align-items: center;
   gap: 80px;
